--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^2.0.0",
     "express": "~3.2.4",
     "mongodb": "^2.1.18",
+    "path": "^0.12.7",
     "socket.io": "~0.9.14"
   }
 }
